# ctstring

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ctstring.hpp  main.cpp  string.cpp  string.hpp
ut/: check.sh  ut_ctstring.cpp
